--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,180 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+	--primaryColor: #ffffff;
+	--secondaryColor: #282828;
+	--accentColor: #3772ff;
+	--successColor: #228b22;
+	--errorColor: #88261a;
+	--paperColor: #f9f9f9;
+	--darkPaperColor: #121212;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--navbar-height: 63px;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+	--scroll-bar-width: 7px;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
 }
 
-html,
+/* html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	margin: 0;
+	height: 100%;
+	width: 100vw;
+	overflow-x: hidden;
+} */
+
+html {
+	width: 100vw;
+	overflow-x: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	max-width: 100%;
+	height: 100vh;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+	/* border: 2px solid; */
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@media (-moz-touch-enabled: 1), (pointer: coarse) {
+	body {
+		position: fixed;
+	}
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+/* #region Custom scroll bar */
+@media (-moz-touch-enabled: 0), (pointer: fine) {
+	* ::-webkit-scrollbar {
+		background: rgba(0, 0, 0, 0.2);
+		width: var(--scroll-bar-width);
+		height: var(--scroll-bar-width);
+	}
+
+	* ::-webkit-scrollbar-track {
+		background: transparent;
+	}
+
+	* :hover::-webkit-scrollbar-track {
+		background: rgba(0, 0, 0, 0.02);
+	}
+
+	* ::-webkit-scrollbar-thumb {
+		transition: 0.5s;
+		border-radius: 8px;
+		background: rgba(0, 0, 0, 0.3);
+	}
+
+	* :hover::-webkit-scrollbar-thumb {
+		background: rgba(0, 0, 0, 0.4);
+	}
+
+	* ::-webkit-scrollbar-thumb:hover {
+		background: rgba(0, 0, 0, 0.5);
+	}
 }
+/* #endregion */
+
+/* #region Responsive font-size */
+.indexPage h1.MuiTypography-root {
+	font-size: 2.1em;
+}
+
+.indexPage h2.MuiTypography-root {
+	font-size: 1.95em;
+}
+
+.indexPage h3.MuiTypography-root {
+	font-size: 1.8em;
+}
+
+.indexPage h4.MuiTypography-root {
+	font-size: 1.6em;
+}
+
+.indexPage h5.MuiTypography-root {
+	font-size: 1.35em;
+}
+
+.indexPage h6.MuiTypography-root {
+	font-size: 1.15em;
+}
+
+.indexPage p.MuiTypography-root {
+	font-size: 1em;
+}
+
+@media (max-width: 374px) {
+	/* Font sizes for screens up to 374px wide */
+	html {
+		font-size: 12px;
+		border-color: blue;
+	}
+}
+
+@media (min-width: 375px) and (max-width: 424px) {
+	/* Font sizes for screens between 375px and 424px wide */
+	html {
+		font-size: 13px;
+		border-color: green;
+	}
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+	/* Font sizes for screens between 425px and 767px wide */
+	html {
+		font-size: 13.5px;
+		border-color: yellow;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+	/* Font sizes for screens between 768px and 900px wide */
+	html {
+		font-size: 14px;
+		border-color: orange;
+	}
+}
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+	/* Font sizes for screens between 1024px and 1439px wide */
+	html {
+		font-size: 16px;
+		border-color: red;
+	}
+}
+
+@media (min-width: 1440px) {
+	/* Font sizes for screens wider than 1440px */
+	html {
+		font-size: 18px;
+		border-color: purple;
+	}
+}
+/* #endregion */
+
+/* #region Snap section on scroll */
+@media screen and (min-width: 900px) {
+	div#snap-container {
+		overflow-x: hidden;
+		overflow-y: scroll;
+		max-width: 100vw;
+		max-height: 100vh;
+		scroll-snap-type: y proximity;
+	}
+
+	div#snap-container section[id*="snap"] {
+		scroll-snap-align: start;
+		scroll-snap-stop: always;
+		scroll-margin-top: var(--navbar-height);
+	}
+}
+/* #endregion */
+
+/* #region Highlight spans of text that have the id="highlight" */
+span#highlight {
+	color: var(--accentColor);
+}
+/* #endregion */
