--- a/components/Home/Sections/Header/Header.module.css
+++ b/components/Home/Sections/Header/Header.module.css
@@ -7,7 +7,7 @@
 	align-items: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
 	.headerMain {
 		min-height: calc(80vh - var(--navbar-height));
 	}
