--- a/components/Home/Sections/Header/Header.module.css
+++ b/components/Home/Sections/Header/Header.module.css
@@ -37,7 +37,8 @@
 }
 
 .heroArea {
-	display: flex;
+	/* display: flex; */
+	padding: 12px;
 	width: 100%;
 }
 
@@ -51,6 +52,8 @@
 }
 
 .heroInfo {
+	text-align: center;
+	margin-bottom: 24px;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -59,6 +62,7 @@
 
 .heroAction {
 	margin-top: 24px;
+	
 }
 
 .heroAction button {
